--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 
 *.cs linguist-language=CSharp
 
-
 *.shader linguist-vendored
+*.hlsl linguist-vendored
+*.cginc linguist-vendored
+*.compute linguist-vendored
+*.meta linguist-detectable=false
